force-app/main/default/objects/Sentiment_Analysis__c/Sentiment_Analysis__c.object-meta.xml
<CustomObject>
    <label>Sentiment Analysis</label>
    <nameField>
        <label>Analysis Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sentiment Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>