force-app/main/default/objects/Sentiment_Analysis__c/fields/Customer_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_name__c</fullName>
    <label>Customer name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>