force-app/main/default/objects/Sentiment_Analysis__c/fields/Feedback_on__c.field-meta.xml
<CustomField>
    <fullName>Feedback_on__c</fullName>
    <label>Feedback on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mortgage loan</fullName>
            </value>
            <value>
                <fullName>Credit card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>